# kt_common_interfaces

./: .gitattributes  .gitignore  CMakeLists.txt  package.xml
msg/: CanMessage.msg  CanMessageRx.msg  CanRegister.msg  ComputedAngle.msg  Gain3d.msg  ImuArray.msg  ImuData.msg  KernelError.msg  LidarDataImu.msg  LidarDataPc.msg  ObstacleBox.msg  ObstacleBoxArray.msg  PacketEx.msg  Param3d.msg  PointEx.msg  RadarPoint.msg  RpointVector.msg  Scale3d.msg  Size3d.msg  VoxelGrid.msg
