<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>kt_interfaces</name>
    <version>0.9.0</version>
    <description>Kartrix.AI - interfaces</description>
    <maintainer email="dev@kartrix.ai">chris</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- Set to build the data format -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
